QPID-5594: [amqp1.0] missing first-acquirer property support in C++ broker

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1573546 13f79535-47bb-0310-9956-ffa450edef68